--- a/papas/statement/statement.tex
+++ b/papas/statement/statement.tex
@@ -11,7 +11,7 @@
 	Al grupo le gusta hacer todo en conjunto, así que compraron una porción
 	de papas para compartir entre todos.
 	Los amigos de Julieta son personas muy civilizadas y toman turnos para
-	sacar papas (algunos incluso dirían que son personas demasiado civilizadas).
+	sacar papas (algunos incluso dirían que son demasiado civilizados).
 	Para mantener el orden, han diseñado un sistema donde cada
 	persona saca solo una papa a la vez.
 
@@ -21,7 +21,7 @@
 	Luego saca una papa la persona de la derecha y así sucesivamente en una
 	ronda alrededor de la mesa.
 	Cuando ya todos sacaron una papa, el ciclo se vuelve a repetir hasta que ya no
-	queden más papas.
+	quedan más papas.
 	Dado el orden que eligieron, Julieta es la $k$-ésima persona en sacar una papa
 	por primera vez.
 
@@ -33,7 +33,8 @@
 	El tamaño de su ración corresponde a la suma de los tamaños de todas
 	las papas de que saca.
 
-	Naturalmente, Julieta quiere que su ración sea lo más grande posible.
+	Naturalmente, Julieta quiere comer lo más posible y le preocupa que su ración
+	sea lo suficientemente grande.
 	Específicamente, si saca papas maximizando su ración, e independiente
 	de la elección de sus amigos, quiere saber el tamaño mínimo que tendrá su ración.
 	¿Podrías ayudarla?
@@ -50,8 +51,9 @@
 \end{inputDescription}
 
 \begin{outputDescription}
-	La salida debe contener un único entero, el tamaño de la ración que Julieta tiene
-	garantizado sacar si sacas las papas de forma óptima.
+	La salida debe contener un único entero, el tamaño mínimo que tendrá la ración
+	de Julieta si saca las papas de forma óptima (maximizando su ración) e independiente
+	de la elección de sus amigos.
 \end{outputDescription}
 
 \begin{scoreDescription}
