--- a/piratas/statement/statement.tex
+++ b/piratas/statement/statement.tex
@@ -16,9 +16,9 @@
     La ICPC publica sus archivos en forma de \emph{torrent}.
     % A diferencia de una descarga convencional, en donde un servidor central
     % controla el envío de datos a todos quienes descarguen el archivo,
-    En una descarga por \emph{torrent} cada archivo tiene asociado un número de ``seeds'' quienes
+    En una descarga por torrent cada archivo tiene asociado un número de \emph{seeds} quienes
     son los que toman el rol de proveer el archivo a quienes lo descargan.
-    Quienes descargan el archivo son llamados ``peers''.
+    Quienes descargan el archivo son llamados \emph{peers}.
 
     Para ganar la competencia Guffy ha decidido priorizar los torrents con la mayor cantidad
     de seeds y la menor cantidad de peers.
@@ -40,7 +40,7 @@
     La salida debe contener un único entero, correspondiente al número
     del torrent con la mayor cantidad de seeds.
     En caso de empate se debe elegir el torrent con la menor cantidad de peers.
-    Si hay un segundo empate puede imprimirse cualquiera de los índices ganadores.
+    Si hay un segundo empate puede imprimirse el número de cualquiera de los torrents ganadores.
 \end{outputDescription}
 
 \begin{scoreDescription}
