--- a/poleras/statement/statement.tex
+++ b/poleras/statement/statement.tex
@@ -28,14 +28,37 @@ Después de investigar en internet, Javier descubrió que controlando el tiempo 
 modelo de secadora puede achicar una polera hasta $k$ tallas.
 Es decir, una polera de talla $s$ puede achicarse a las tallas $s-1, s-2, \dots$, $s-k$.
 Naturalmente, una polera de talla menor o igual que $k$ solo puede achicarse hasta la talla 1.
+Una polera puede meterse solamente una vez a la secadora para achicarla.
 
 Antes de ponerse a achicar poleras, Javier quiere asegurarse de que es
 posible convertir las poleras que ya compró en poleras de
 las tallas que necesita.
 Específicamente, quiere saber si para cada talla $i$ es posible obtener
 al menos $b_i$ poleras de esa talla si achica algunas de las poleras que ya compró.
+Por ejemplo, considera el siguiente escenario representado por la siguiente tabla donde la cantidad
+de tallas es tres ($n=3$):
+\begin{center}
+\begin{tabular}{cccc}
+   & \footnotesize 1 & \footnotesize2  &  \footnotesize 3 \\
+\hline
+ a & 10 & 21 & 32 \\
+ b & 12 & 20 & 30 \\
+\hline
+\end{tabular}
+\end{center}
+La fila \texttt{a} representa las poleras que compró de cada talla y la fila \texttt{b}
+la cantidad de poleras que necesita. Si la secadora puede achicar poleras
+hasta dos tallas ($k=2$) entonces Javier tiene varias opciones para obtener las poleras
+que necesita. Algunas de las opciones son:
+\begin{itemize}
+    \item Achicar la polera extra de talla 2 en una talla y una de las poleras extra de talla
+        3 en dos tallas.
+    \item Achicar las dos poleras extras de talla 3 en dos tallas.
+    \item Achicar dos poleras de talla 2 en una talla y luego una polera de talla 3 en una talla.
+\end{itemize}
+
 Como Javier está muy apurado con los temas del viaje, no tiene el tiempo para determinar
-esto con certeza.
+con certeza si puede achicar las poleras adecuadamente.
 ?`Podrías ayudarlo?
 \end{problemDescription}
 
@@ -83,12 +106,7 @@ En el caso contrario, debe imprimir \texttt{NO}.
 \sampleIO{sample-2}
 \begin{center}
     \begin{minipage}{0.94\textwidth}
-    \textbf{Explicación caso de ejemplo 2:} Como $k=2$, Javier tiene un par de alternativas para obtener
-    las poleras de talla 1 que le faltan.
-    Una opción es achicar la polera extra de talla 2 en una talla y una de las poleras extra de
-    talla 3 en dos tallas.
-    También podría achicar las dos poleras extras de talla 3 en dos tallas.
-    Por lo tanto, en este caso la respuesta es \texttt{SI}.
+    \textbf{Explicación caso de ejemplo 2:} Este es el ejemplo explicado en el enunciado.
     \end{minipage}
 \end{center}
 
