--- a/titlepage.tex
+++ b/titlepage.tex
@@ -14,12 +14,12 @@
   \vskip 10pt
   \large{\phase}
   \vskip 10pt
-  \normalsize{\it 11 de Enero, \the\year}
+  \normalsize{\it 21 de Octubre, \the\year}
 
   \vskip 85pt
 
-  \emph{Las siguientes personas participaron en la elaboración de este conjunto
-    de problemas:}
+  % \emph{Las siguientes personas participaron en la elaboración de este conjunto
+  %   de problemas:}
   \vskip 10pt
 \end{center} % \end{itemize}
 
