cambiar subtareas y arreglar un error de enunciado

--- a/papas/statement/statement.tex
+++ b/papas/statement/statement.tex
@@ -42,7 +42,7 @@
 
 \begin{inputDescription}
 	La primera línea de entrada contiene tres enteros $p$, $n$ y $k$
-	$(1 \leq k \leq p \leq n \leq 10^6$ y $2 \leq n)$, los cuales
+	$(1 \leq k \leq n \leq p \leq 10^5$ y $2 \leq n)$, los cuales
 	indican respectivamente la cantidad de papas, la cantidad de personas en el grupo
 	y la posición de Julieta.
 
@@ -58,11 +58,11 @@
 
 \begin{scoreDescription}
 	\subtask{??}
-  	Se probarán varios casos en que $k = 1$.
+  	Se probarán varios casos en que $p = 2$.
   	\subtask{??}
  	Se probarán varios casos en que $n = k = p$.
   	\subtask{??}
-  	Se probarán varios casos en que $n \leq 250$.
+  	Se probarán varios casos en que $p \leq 250$.
 	\subtask{??}
 	Se probarán varios casos sin restricciones adicionales.
 \end{scoreDescription}
