papas: correcciones del enunciado

--- a/papas/statement/statement.tex
+++ b/papas/statement/statement.tex
@@ -29,9 +29,9 @@
 	distinto.
 	Julieta es una persona muy observadora y ha determinado el tamaño $t_i$ de cada una
 	de ellas.
-	Dependiendo del tamaño de las papas que saca, su ración será más o menos grande.
+	Dependiendo del tamaño de las papas que saque, su ración será más o menos grande.
 	El tamaño de su ración corresponde a la suma de los tamaños de todas
-	las papas de que saca.
+	las papas que saca.
 
 	Naturalmente, Julieta quiere comer lo más posible y le preocupa que su ración
 	sea lo suficientemente grande.
@@ -43,8 +43,8 @@
 \begin{inputDescription}
 	La primera línea de entrada contiene tres enteros $p$, $n$ y $k$
 	$(1 \leq k \leq n \leq p \leq 10^5$ y $2 \leq n)$, los cuales
-	indican respectivamente la cantidad de papas, la cantidad de personas en el grupo
-	y la posición de Julieta.
+	indican la cantidad de papas, la cantidad de personas en el grupo
+	y la posición de Julieta, respectivamente.
 
 	La segunda línea contiene $p$ enteros, donde el entero $i$-ésimo
 	corresponde al tamaño $t_i$ ($1 \leq t_i \leq 10^3$) de la papa número $i$.
