--- a/poleras/statement/statement.tex
+++ b/poleras/statement/statement.tex
@@ -10,7 +10,7 @@ Javier va a viajar a la Olimpiada Internacional de Informática (IOI)
 acompañando al equipo Chileno.
 En su emoción, decidió mandar a hacer poleras oficiales del equipo.
 
-Como todos sabemos, las poleras vienen en $n$ tallas, con la talla 1 siendo la más pequeña
+Como todos sabemos, las poleras vienen en $n$ tallas, siendo la talla 1 la más pequeña
 y la talla $n$ la más grande.
 Para cada talla $i$, Javier mandó a hacer $a_i$ poleras de esa talla.
 
@@ -21,21 +21,21 @@ En vez de $a_i$ poleras de talla $i$ necesitaba $b_i$ poleras de esa talla.
 
 Como ya era muy tarde para mandar a hacer las poleras de nuevo, Javier
 empezó desesperadamente a buscar una solución alternativa.
-En un momento de inspiración, recordó que se puede achicar una polera metiéndola a
-la secadora a alta potencia.
+En un momento de inspiración, recordó que se puede encoger una polera metiéndola a
+la secadora de ropa a alta potencia.
 
-Después de investigar en internet, Javier descubrió que controlando el tiempo de secado su
-modelo de secadora puede achicar una polera hasta $k$ tallas.
-Es decir, una polera de talla $s$ puede achicarse a las tallas $s-1, s-2, \dots$, $s-k$.
-Naturalmente, una polera de talla menor o igual que $k$ solo puede achicarse hasta la talla 1.
-Una polera puede meterse solamente una vez a la secadora para achicarla.
+Después de investigar en internet, Javier descubrió que, controlando el tiempo de secado, su
+secadora puede encoger una polera hasta $k$ tallas.
+Es decir, una polera de talla $s$ puede encogerse a las tallas $s-1, s-2, \dots$, $s-k$.
+Naturalmente, una polera de talla menor o igual que $k$ solo puede encogerse hasta la talla 1.
+Cada polera puede meterse solamente una vez a la secadora para achicarla.
 
-Antes de ponerse a achicar poleras, Javier quiere asegurarse de que es
+Antes de iniciar el proceso, Javier quiere asegurarse de que es
 posible convertir las poleras que ya compró en poleras de
 las tallas que necesita.
 Específicamente, quiere saber si para cada talla $i$ es posible terminar
-con al menos $b_i$ poleras de esa talla si achica algunas de las poleras que ya compró.
-Por ejemplo, considera el siguiente escenario representado por la siguiente tabla donde la cantidad
+con al menos $b_i$ poleras de esa talla si encoge algunas de las poleras que ya compró.
+Por ejemplo, considera un escenario representado por la siguiente tabla, donde la cantidad
 de tallas es tres ($n=3$):
 \begin{center}
 \begin{tabular}{cccc}
@@ -46,48 +46,48 @@ de tallas es tres ($n=3$):
 \hline
 \end{tabular}
 \end{center}
-La fila $a$ representa las poleras que compró de cada talla y la fila $b$
-la cantidad de poleras que necesita. Si la secadora puede achicar poleras
-hasta dos tallas ($k=2$) entonces Javier tiene varias opciones para obtener las poleras
+La fila $a$ representa las poleras que compró de cada talla y la fila $b$,
+la cantidad de poleras que necesita. Si la secadora puede encoger poleras
+hasta dos tallas ($k=2$), entonces Javier tiene varias opciones para obtener las poleras
 que necesita. Algunas de las opciones son:
 \begin{itemize}
-    \item Achicar la polera extra de talla 2 en una talla y una de las poleras extra de talla
+    \item Encoger la polera extra de talla 2 en una talla y una de las poleras extra de talla
         3 en dos tallas.
-    \item Achicar las dos poleras extras de talla 3 en dos tallas.
-    \item Achicar dos poleras de talla 2 en una talla y luego una polera de talla 3 en una talla.
+    \item Encoger las dos poleras extra de talla 3 en dos tallas.
+    \item Encoger dos poleras de talla 2 en una talla y luego una polera de talla 3 en una talla.
 \end{itemize}
 
-Como Javier está muy apurado con los temas del viaje, no tiene el tiempo para determinar
-con certeza si puede achicar las poleras adecuadamente.
+Como Javier está muy apurado con los preparativos del viaje, no tiene el tiempo para determinar
+con certeza si puede encoger las poleras adecuadamente.
 ?`Podrías ayudarlo?
 \end{problemDescription}
 
 \begin{inputDescription}
 La primera línea de la entrada contiene los enteros $n$ y $k$ $(1 \leq n \leq 10^6, 0 \leq k \leq 10^6)$,
-indicando respectivamente la cantidad de tallas y la cantidad máxima de tallas que la secadora puede achicar.
+que indican la cantidad total de tallas y la cantidad máxima de tallas que la secadora puede achicar, respectivamente.
 
 La segunda línea contiene los números enteros $a_1, a_2, \dots, a_n$ $(0 \leq a_i \leq 10^9$),
-indicando la cantidad de poleras de cada talla que Javier compró.
+que corresponden a la cantidad de poleras de cada talla que compró Javier.
 
-La tercera línea contiene los números enteros $b_1, b_2, \dots, b_n$ $(0 \leq b_i \leq 10^9)$, indicando
+La tercera línea contiene los números enteros $b_1, b_2, \dots, b_n$ $(0 \leq b_i \leq 10^9)$, que indican
 la cantidad de poleras de cada talla que necesita Javier.
 \end{inputDescription}
 
 \begin{outputDescription}
-Si achicando poleras es posible terminar con al menos $b_i$
-poleras de talla $i$ para cada $i$, tu programa debe imprimir \texttt{SI}.
-En el caso contrario, debe imprimir \texttt{NO}.
+Si para cada $i$ es posible terminar con al menos $b_i$
+poleras de esa talla, tu programa debe imprimir \texttt{SI}.
+En caso contrario, debe imprimir \texttt{NO}.
 \end{outputDescription}
 
 \begin{scoreDescription}
   \subtask{10}
-  Se probarán varios casos con $k=0$, es decir, la secadora no puede achicar poleras.
+  Se probará varios casos con $k=0$, es decir, la secadora no puede encoger poleras.
   \subtask{20}
-  Se probarán varios casos con $k=1$, es decir, la secadora puede achicar poleras a lo más una talla.
+  Se probará varios casos con $k=1$, es decir, la secadora puede encoger poleras a lo más una talla.
   \subtask{30}
-  Se probarán varios casos con $k \leq 100$.
+  Se probará varios casos con $k \leq 100$.
   \subtask{40}
-  Se probarán varios casos sin restricciones adicionales.
+  Se probará varios casos sin restricciones adicionales.
 \end{scoreDescription}
 
 \begin{sampleDescription}
@@ -113,8 +113,8 @@ En el caso contrario, debe imprimir \texttt{NO}.
 \sampleIO{sample-3}
 \begin{center}
     \begin{minipage}{0.94\textwidth}
-    \textbf{Explicación caso de ejemplo 3:} En este caso la respuesta es \texttt{NO} porque si Javier
-    achica algunas poleras para obtener las poleras de talla 1 que le faltan se quedará sin poleras
+    \textbf{Explicación caso de ejemplo 3:} En este caso la respuesta es \texttt{NO}, porque si Javier
+    achica algunas poleras para obtener las poleras de talla 1 que le faltan, se quedará sin poleras
     suficientes de talla 2 o 3.
     \end{minipage}
 \end{center}
