Add subtask scores

--- a/papas/statement/statement.tex
+++ b/papas/statement/statement.tex
@@ -57,13 +57,13 @@
 \end{outputDescription}
 
 \begin{scoreDescription}
-	\subtask{??}
+	\subtask{15}
   	Se probarán varios casos en que $p = 2$.
-  	\subtask{??}
+  	\subtask{15}
  	Se probarán varios casos en que $n = k = p$.
-  	\subtask{??}
+  	\subtask{30}
   	Se probarán varios casos en que $p \leq 250$.
-	\subtask{??}
+	\subtask{40}
 	Se probarán varios casos sin restricciones adicionales.
 \end{scoreDescription}
 
